--- a/index.html
+++ b/index.html
@@ -1,8 +1,41 @@
+<!doctype html>
 <html>
-    <head>
-        <title>Hello</title>
-    </head>
-    <body>
-        <p>Hello world</p>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>alutman.github.io by alutman</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>alutman.github.io</h1>
+        <p></p>
+
+
+        <p class="view"><a href="https://github.com/alutman">View My GitHub Profile</a></p>
+
+      </header>
+      <section>
+        <h3>
+<a id="github-pages" class="anchor" href="#github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GitHub Pages.</h3>
+
+<p>Blah Blah Blah</p>
+
+<pre><code>chickens
+</code></pre>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
 </html>
