--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
         <p class="view"><a href="https://github.com/alutman">View My GitHub Profile</a></p>
+        <p class="view"><a href="/keyweb">Self Keeweb</a></p>
 
       </header>
       <section>
