Add fake word generator

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/alutman">View My GitHub Profile</a></p>
-        <p class="view"><a href="/keeweb">Self Keeweb</a></p>
+        <p class="view"><a href="https://github.com/alutman">Github Profile</a></p>
+        <hr/>
+        <p class="view"><strong><a href="/keeweb">Keeweb</a></strong>: Keepass encrypted keystore for the <a href="https://github.com/keeweb/keeweb">web</a></p>
+        <p class="view"><strong><a href="/generator">Fake Word Generator</a></strong>: Generate random words using <a href="https://github.com/mrsharpoblunto/foswig.js/">markov chains</a></p>
 
       </header>
       <section>
         <h3>
-<a id="github-pages" class="anchor" href="#github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GitHub Pages.</h3>
+<a id="github-pages" class="anchor" href="#github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Things</h3>
 
-<p>Blah Blah Blah</p>
+<p>Blah blah blah</p>
 
 <pre><code>chickens
 </code></pre>
