--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
         <hr/>
         <p class="view"><strong><a href="/keeweb">Keeweb</a></strong>: Keepass encrypted keystore for the <a href="https://github.com/keeweb/keeweb">web</a></p>
         <p class="view"><strong><a href="/generator">Fake Word Generator</a></strong>: Generate random words using <a href="https://github.com/mrsharpoblunto/foswig.js/">markov chains</a></p>
+        <p class="view"><strong><a href="http://s3-ap-southeast-2.amazonaws.com/lenr/tnt-battlecruiser/releases.html">Tooth and Tail Battlecruiser Mod</a></strong>: Adds a Battlecruiser unit to Tooth and Tail</p>
 
       </header>
       <section>
         <h3>
-<a id="github-pages" class="anchor" href="#github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Things</h3>
+<a id="github-pages" class="anchor" href="#github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Blog</h3>
 
-<p>Blah blah blah</p>
+<p>I'm not really into blogs</p>
 
 <pre><code>chickens
 </code></pre>
